--- a/Spike.PerimeterValidation/Spike.PerimeterValidation.csproj
+++ b/Spike.PerimeterValidation/Spike.PerimeterValidation.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdentityResolvers\AnonymousIdentityResolver.cs" />
+    <Compile Include="IdentityResolvers\WindowsIdentityResolver.cs" />
+    <Compile Include="IdentityResolverType.cs" />
     <Compile Include="ValidationAspectBase.cs" />
     <Compile Include="TypeValidator.cs" />
     <Compile Include="ValidationExtenders.cs" />
@@ -54,11 +57,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Spike.PerimeterValidation.Contracts\Spike.PerimeterValidation.Contracts.csproj">
+    <ProjectReference Include="..\Spike.PerimeterValidation.Contracts\Spike.PerimeterValidation.Common.csproj">
       <Project>{76461fa4-8cef-4713-b087-31d4dda002f3}</Project>
-      <Name>Spike.PerimeterValidation.Contracts</Name>
+      <Name>Spike.PerimeterValidation.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\PostSharp.4.3.26\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.4.3.26\tools\PostSharp.targets')" />
   <Target Name="EnsurePostSharpImported" BeforeTargets="BeforeBuild" Condition="'$(PostSharp30Imported)' == ''">
