--- a/Spike.PerimeterValidation/Spike.PerimeterValidation.csproj
+++ b/Spike.PerimeterValidation/Spike.PerimeterValidation.csproj
@@ -52,6 +52,10 @@
     <Compile Include="TypeValidator.cs" />
     <Compile Include="ValidationExtenders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\ObjectValidator.cs" />
+    <Compile Include="Validation\ValidationExtenders.cs" />
+    <Compile Include="Validation\ValidationItemResult.cs" />
+    <Compile Include="Validation\ValidationOutcome.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
