--- a/Spike.Tests/Spike.Tests.csproj
+++ b/Spike.Tests/Spike.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="IdentityResolverTests.cs" />
+    <Compile Include="ObjectValidatorTests.cs" />
     <Compile Include="OrchestrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
